2009-09-02  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Header.swg: remove spurious references to cmdline.h

2009-09-02  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/Makefile.am: fix dumb typos

2009-08-31  Dustin J. Mitchell <dustin@zmanda.com
	* ndmp-src/ndmjob_main.c ndmp-src/ndmjob_job.c: don't use fopen64

2009-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* man/entities/global.entities.in man/xml-source/amadmin.8.xml
	  man/xml-source/amcheck.8.xml man/xml-source/amcheckdump.8.xml
	  man/xml-source/amdevcheck.8.xml man/xml-source/amdump.8.xml
	  man/xml-source/amflush.8.xml man/xml-source/amgetconf.8.xml
	  man/xml-source/amlabel.8.xml man/xml-source/amreport.8.xml
	  man/xml-source/amrestore.8.xml man/xml-source/amservice.8.xml
	  man/xml-source/amtape.8.xml man/xml-source/amtapetype.8.xml
	  man/xml-source/amvault.8.xml: use entities to represent config
	  overwrites consistently

2009-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Cmdline.swg perl/Amanda/Header.swg: don't depend on
	  cmdline.h in a client-only package
	* perl/Amanda/Cmdline.pod perl/Amanda/Header.pod: adjust docs
	* installcheck/Amanda_Cmdline.pl installcheck/Amanda_Header.pl: adjust
	  tests

2009-08-31 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: add amstar and amgtar to suid section of
	  %files for server.

2009-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Give only a warning if user specified path
				    is not correct for gtar and star.

2009-08-28  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Device.pod: be explicit: finish_file is not for read
	  mode

2009-08-26  Paul C. Mantz <pcmantz@zmanda.com>
	* xfer-src/filter-process.c: fixed write warnings which were
  	  breaking Ubuntu builds

2009-08-26  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Logfile.swg: added four previously omitted program
	types
	* installcheck/Amanda_Logfile.pl: regression tests for the program
	types
